Fix menu aligning with rest of text

--- a/components/Navbar.module.scss
+++ b/components/Navbar.module.scss
@@ -11,6 +11,10 @@
     @include horizontal-list;
   }
 
+  li:nth-of-type(5) {
+    margin-right: 0;
+  }
+
   a {
     @include poppins(700);
     @include link-normal;
